platform/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Asbestos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asbestos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BE__c</fullName>
        <label>BE #</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Building_Description__c</fullName>
        <label>Building Description</label>
        <picklist>
            <picklistValues>
                <fullName>Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Rise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In a Complex Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stand Alone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strip Mall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Adjacent Buildings with a Single BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vault</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <inlineHelpText>Is the building is leased or owned?</inlineHelpText>
        <label>Building</label>
        <picklist>
            <picklistValues>
                <fullName>Leased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Business Line</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPG_Condition__c</fullName>
        <description>Changed to &quot;CPG Condition&quot; at Karen Nott&apos;s request (via case #0004310 in Fulcrum CRM)</description>
        <inlineHelpText>CPG SAP report information.</inlineHelpText>
        <label>CPG Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Bank Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPG Condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed Use Occupancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Bank Occ / ORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Bank Surplus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Negotiations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacant-Held for Bank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPG_Status__c</fullName>
        <inlineHelpText>4.1.1.12 CPG Status Radio Y N N Values:
Active
Inactive</inlineHelpText>
        <label>CPG Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complex_Site_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complex Site Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dish_Network_Receivers__c</fullName>
        <label>Dish Network Receivers</label>
        <summaryForeignKey>Dish_Network_Receiver__c.Vnet_Site__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FX_Store__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FX Store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Function_LOB__c</fullName>
        <description>4.1.1.22 Function/LOB Dropdown Y N N See Business Rule 4.1.2.3
Values</description>
        <inlineHelpText>Multiiple function/LOB can be chosen if Admin or Mixed LOB is selected in the SAP Primary LOB</inlineHelpText>
        <label>Function/LOB</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Mortgage / Card SVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SVC Center / Call Center / Ops Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wealth Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wells Fargo Advisors</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IPT_Migration_Date__c</fullName>
        <inlineHelpText>The actual IPT migration date.</inlineHelpText>
        <label>IPT Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPT_Scheduled_Migration_Date__c</fullName>
        <inlineHelpText>This is the date IPT Migration is scheduled.</inlineHelpText>
        <label>IPT Scheduled Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPT_TDM_Data_Carrier__c</fullName>
        <label>IPT/TDM Data Carrier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPT_TDM_Site_Type__c</fullName>
        <label>IPT/TDM Site Type</label>
        <picklist>
            <picklistValues>
                <fullName>CME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ExIPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IP_Telephony_VoIP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Site Telephony is IP driven</inlineHelpText>
        <label>IP Telephony(VoIP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_FX_Date__c</fullName>
        <description>First Date of FX use at the store</description>
        <label>Initial FX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_AU__c</fullName>
        <label>Internal AU #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_Floor_Plan_Layout_Attachment_on_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOB/Floor Plan/Layout Attachment on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOB_at_Site__c</fullName>
        <description>Line of Business identified at site</description>
        <label>LOB at Site</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Land_or_Building_Square_Footage__c</fullName>
        <label>Land or Building Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Corp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Corp</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Legacy Sites</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MAC_Address__c</fullName>
        <label>MAC Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Building_Details__c</fullName>
        <label>Miscellaneous Building Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Multiple_BE_s__c</fullName>
        <label>Multiple BE #s</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Non_Wells_Fargo_Content_Info__c</fullName>
        <inlineHelpText>Please the Company providing the service to the Site (ex: Time Warner Cable)</inlineHelpText>
        <label>Non-Wells Fargo Content Info</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Wells_Fargo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Non-Wells Fargo Content is to show any services from any commercial service company (Time Warner Cable) is active at this Site</inlineHelpText>
        <label>Non-Wells Fargo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Floors__c</fullName>
        <label>Number of Floors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PID__c</fullName>
        <label>PID #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Au__c</fullName>
        <label>Primary Au#</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_FX_Install_Date__c</fullName>
        <description>Anticipated date for FX Digital Signage Install</description>
        <label>Proposed FX Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region_Division__c</fullName>
        <label>Region Division</label>
        <picklist>
            <picklistValues>
                <fullName>ALASKA RETAIL &amp; BUSINESS BANKING DIVISION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBUQUERQUE NEW MEXICO RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTIN RETAIL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPITAL GATEWAY RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CENTRAL ALABAMA RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CENTRAL PA RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CENTRAL VALLEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHICAGO MARKET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COASTAL SC CBP RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMMUNITY FOOTHILLS MARKET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELAWARE VALLEY CENTRAL RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELAWARE VALLEY NORTH RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELAWARE VALLEY SOUTH RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DENVER RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DESERT BORDER COMMUNITY BANK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFW - EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFW - TEXARKANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFW - WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAST ATLANTA RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAST BAY MARKET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAST CENTRAL FL RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EASTERN GATEWAY BANK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EASTERN IA RETAIL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EASTERN VA RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL PASO/ARIZONA RETAIL MARKET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIRST COAST RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOUR RIVERS MARKET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREATER BAY NORTH RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREATER BAY SOUTH RETAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREATER CHARLOTTE CBP RETAIL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_Main__c</fullName>
        <description>The main regions for North American</description>
        <label>Region Main</label>
        <picklist>
            <picklistValues>
                <fullName>Carolina&apos;s Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Atlantic Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain Midwest Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA/DE Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Coast Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Mountain Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Los Angeles Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bay Area Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Mount Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central/Greater Texas Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFW / Houston Texas Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Lakes Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Central Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern CA Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK / WA Regional Banking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_Market__c</fullName>
        <label>Region Market</label>
        <picklist>
            <picklistValues>
                <fullName>ALEXANDRIA CITY DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLENTOWN/SOUTHERN LEHIGH DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALPHARETTA DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANCHORAGE CENTRAL DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANCHORAGE SUBURBS DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANNISTON DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTELOPE-VALLEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPALACHIANS DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPLEGATE TRAIL DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARLINGTON COUNTY DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASHEVILLE DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASHLEY RIVER DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATHENS/MONROE DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLANTIC COUNTY DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUGUSTA AIKEN DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUGUSTA EVANS DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AURORA DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTIN NORTH CENTRAL -HOPKINS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTIN NORTH - LIPSEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTIN NORTH - SIVER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTIN NORTHWEST - MILLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTIN SOUTHEAST - JUAREZ-REID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTIN SOUTH - SANCHEZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTIN WEST - LANKFORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALDWIN COUNTY DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERKS DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEVERLY HILLS CORRIDOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIG BEND DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BILLINGS SUB-DISTRICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIRMINGHAM CENTRAL DM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_Sub__c</fullName>
        <label>Region Sub</label>
        <picklist>
            <picklistValues>
                <fullName>ALASKA REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARIZONA REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLANTA REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BORDER BANKING TX/AZ REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CENTRAL FLORIDA REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CENTRAL TEXAS REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHARLOTTE REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLORADO REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DALLAS FORT WORTH REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREATER BAY AREA REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREATER GEORGIA REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREATER GULF COAST REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREATER TEXAS REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREATER VA REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREATER WASHINGTON REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GR PA REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GR PHILA &amp; DELAWARE REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOUSTON REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAIL REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDAHO REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIANA / OHIO REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS / NE REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOS ANGELES / OC REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARYLAND REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MID SOUTH REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINNESOTA REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MONTANA REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEVADA REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW MEXICO REGIONAL BANKING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW YORK/CONNECTICUT REGIONAL BANKING</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_BU_PR_Type__c</fullName>
        <label>SAP BU/PR Type</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Building with Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Store Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JV Specialty Outlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Outlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Outlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JV Desk Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JV Master Desk Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Desk Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_Primary_LOB__c</fullName>
        <label>SAP Primary LOB</label>
        <picklist>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed LOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WF Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WF WBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WFF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WFHM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Status__c</fullName>
        <description>No Prior Service, Ordered / Pending, Active, De-Activated are the values</description>
        <inlineHelpText>Select Active if ANY Content Service is being provided to the Site. The four values for this field are No Prior Service, Ordered / Pending, Active, De-Activated. No Prior Service is the default.</inlineHelpText>
        <label>Service Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Prior Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ordered / Pending</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>De-Activated</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>No Install per CPG PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Backdoor_Phone__c</fullName>
        <label>Site Backdoor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Site_Identifier__c</fullName>
        <label>Site Identifier</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_AU__c</fullName>
        <label>Store AU #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Loc__c</fullName>
        <label>Store Loc #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Type__c</fullName>
        <inlineHelpText>The type of store, if Store was selected for the Function/LOB field</inlineHelpText>
        <label>Store Type</label>
        <picklist>
            <picklistValues>
                <fullName>Branch Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Store Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Teller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighborhood Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Contractors__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Contractors</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sub Contractors</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <label>Super Region</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing High Level Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Midwest Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Mountain Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Regional Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest Regional Banking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgent_Site_Info_Expires__c</fullName>
        <description>The specific time that the urgent site info should be removed via the crontab review. If an Urgent Site Info message is set but this expiration is not set, then this will default to 30 days.</description>
        <inlineHelpText>The specific time that the urgent site info should be removed via the crontab review. If an Urgent Site Info message is set but this expiration is not set, then this will default to 30 days.</inlineHelpText>
        <label>Urgent Site Info Expires</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Urgent_Site_Info__c</fullName>
        <inlineHelpText>Urgent Site Info is limited to 80 characters.</inlineHelpText>
        <label>Urgent Site Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vnet_Site_ID__c</fullName>
        <formula>ShippingState  &amp;  BE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vnet Site ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WFA_AU__c</fullName>
        <label>WFA AU #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>SIte</fullName>
        <active>true</active>
        <label>SIte</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>